tests/spec/fail/generic_list_empty_lock_mismatch.aja
fuc mark_ints(nums: list[int]) -> void:
    return

nums = []
mark_ints(nums)
nums.append("oops")
